2003-12-04  H.J. Lu  <hongjiu.lu@intel.com>

	* elf32-ppc.c (ppc_elf_relax_section): Don't check relax_finalizing.

2003-12-04  H.J. Lu  <hongjiu.lu@intel.com>

	* elfxx-ia64.c (elfNN_ia64_relax_section): Use the
	need_relax_finalize field in link_info instead of
	relax_finalizing to check if the relax finalize pass is being
	done.

2003-12-04  Dmitry Semyonov  <Dmitry.Semyonov@oktet.ru>

	* coff-arm.c (coff_arm_relocate_section, bfd_arm_process_before_allocation):
	Change ARM26* to ARM_26* in comments to match definitions.
	(coff_arm_adjust_symndx): Replace hard-coded constants with
	appropriate definitions (ARM_26*).

2003-12-04  Alan Modra  <amodra@bigpond.net.au>

	* coff-i860.c (coff_i860_reloc_nyi): Return bfd_reloc_not_supported.
	* elf-m10300.c (elf32_mn10300_finish_hash_table_entry): Warning fixes.
	(mn10300_elf_relax_section): Likewise.
	* nlm32-alpha.c (ONES): Define.
	(nlm32_alpha_howto_table): Use it to avoid warnings.

2003-12-04  Alan Modra  <amodra@bigpond.net.au>

	* elf32-i386.c (elf_i386_object_p): Delete.
	(elf_backend_object_p): Don't define.
	* elf32-s390.c (elf_s390_object_p): No need to alloc tdata here.
	* elf32-sh.c (sh_elf_object_p): Likewise.
	* elf32-sparc.c (elf32_sparc_object_p): Likewise.
	* elf64-alpha.c (elf64_alpha_object_p): Likewise.
	* elf64-s390.c (elf_s390_object_p): Likewise.
	* elf64-x86-64.c (elf64_x86_64_elf_object_p): Likewise.

2003-12-03  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

	* archures.c (bfd_mach_m32r2): Add new machine type.
	* bfd-in2.h: Regenerate.
	* cpu-m32r.c : Add new machine type.
	* elf32-m32r.c (m32r_elf_object_p, m32r_elf_final_write_processing,
        m32r_elf_merge_private_bfd_data): Add support for new machine
	type.

2003-12-03  Dave Airlie  <airlied@linux.ie>

	* config.bfd: Add vax-linux-gnu target.
	* configure.in: Likewise.
	* configure: Regenerate.

2003-12-03  Alan Modra  <amodra@bigpond.net.au>

	* ecoff.c (ecoff_link_add_archive_symbols): Update for renamed