@@ -1,3 +1,8 @@
+2003-12-05  Dmitry Semyonov  <Dmitry.Semyonov@oktet.ru>
+
+	* pe-dll.c (generate_reloc): Remap ARM_26D relocation from 5 to
+	0.  This fixes "bad fixup" error generated by MS linker.
+
 2003-12-04  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* emultempl/ia64elf.em (gld${EMULATION_NAME}_after_parse): Set
