@@ -1,3 +1,12 @@
+2003-12-05  Dmitry Semyonov  <Dmitry.Semyonov@oktet.ru>
+
+	* coff-arm.c (aoutarm_std_reloc_howto [ARM_WINCE]): Set
+	partial_inplace for these relocs to FALSE for comptability with
+	the MS linker.
+	Remap ARM_26D relocation from 5 to 0. This fixes "bad fixup" error
+	generated by MS linker, and brings the relocation in line the MS
+	PE documentation.
+
 2003-12-04  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* elf32-ppc.c (ppc_elf_relax_section): Don't check relax_finalizing.
